<resources>
    <string name="app_name">CLT para PJ</string>

    <!-- Abertura -->
    <string name="bemVindo">Bem Vindo!</string>
    <string name="loading">Loading…</string>
    <string name="versao">Versão: 1.2.3</string>
    <string name="email">dreambruno@gmail.com</string>
    <string name="imagemCLTxPJ">Imagem representando a dúvida entre ter um contrato CLT ou PJ</string>

    <!-- Adicionar Beneficio -->
    <string name="btSair">Sair</string>
    <string name="btSalvar">Salvar</string>
    <string name="btExcluir">Excluir</string>
    <string name="dgTituloAdd">Adicionar Benefício</string>
    <string name="dgTituloEdit">Editar Benefício</string>
    <string name="dgBeneficio">Benefício</string>
    <string name="txNome">Nome:</string>
    <string name="txValor">Valor:</string>
    <string name="txDesconto">Desconto:</string>

    <!-- Configurar Filho Pensão -->
    <string name="fpTitulo">Configuração Dependente</string>
    <string name="fpFilhos">Filhos:</string>
    <string name="fpPensao">Pensão:</string>
    <string name="fpClt">(Modelo CLT*)</string>
    <string name="fpMei">(Modelo PJ*)</string>
    <string name="fpObs">*Modelo CLT e PJ para com e sem vinculo empregaticio.</string>
    <string name="fpPorcento">%</string>

    <!-- Dashboard -->
    <string name="tab_text_1">CLT</string>
    <string name="tab_text_2">PJ</string>
    <string name="tab_text_3">Resultado</string>
    <string name="action_settings">Configurações</string>

    <!-- CLT -->
    <string name="btMostrar">Mostrar Descontos</string>
    <string name="btOcultar">Ocultar Descontos</string>
    <string name="btAdicionar">Adicionar</string>

    <string name="txSalario">Salário:</string>
    <string name="txTransporte">Vale Transp.:</string>
    <string name="txRefeicao">Vale Refeição:</string>
    <string name="inss">INSS:</string>
    <string name="irrf">IRRF:</string>
    <string name="outro">Outro</string>
    <string name="txAdicional">(Salário + Adicional)</string>


    <string name="valorMensal">Valor Mensal</string>
    <string name="valorDiario">Valor Diário</string>
    <string name="valorZero">R$ 0,00</string>

    <!-- Comparativo -->
    <string name="tx13Salario">13º Salário:</string>
    <string name="txComImposto">(c/ Imposto e Pensão)</string>
    <string name="txLiquido">(Liquido)</string>
    <string name="txFerias">Férias:</string>
    <string name="txAnual">Valor Anual:</string>
    <string name="txCBeneficio">(Liquido c/ Benefícios)</string>

    <string name="txValorCLT">Valores para CLT</string>
    <string name="txValorPJ">Valores para PJ</string>
    <string name="txPjImposto">(c/ Imposto)</string>
    <string name="txPJ13Ferias">(13º Salário e Férias)</string>
    <string name="txPJBeneficios">Benefícios:</string>
    <string name="txPJRefTrans">(Refeição, transporte e outros)</string>
    <string name="txPJTotal">(Total Mínimo)</string>
    <string name="txProLabore">Pró-Labore:</string>

    <!-- PJ -->
    <string name="txContador">Contador:</string>
    <string name="txSaude">Pl. Saúde:</string>
    <string name="tlDesconto">Descontos</string>
    <string name="irpf">IRPF:</string>
    <string name="simples">Simples:</string>
    <string name="transporte">Transporte:</string>
    <string name="txObs">OBS: Pró-Labore influencia no seu imposto. Abaixo de 28% o imposto do "Simples" é de 15,5%. Igual ou superior a isso o imposto é de 6%.</string>
</resources>
