<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".telas.FragmentCLT">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="600dp">

        <Button
            android:id="@+id/btAddBeneficio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/btAdicionar"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/painelBeneficios" />

        <EditText
            android:id="@+id/etSalario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/valorMensal"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="12"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etTransporte"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/valorDiario"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/etSalario" />

        <EditText
            android:id="@+id/etRefeicao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/valorDiario"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/etTransporte" />

        <LinearLayout
            android:id="@+id/painelBeneficios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRefeicao">

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txSalario"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txTransporte"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etTransporte" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txRefeicao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTransporte" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@color/branco"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/tlDesconto"
            android:textSize="16sp"
            android:translationY="10dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout3" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/borda_titulo"
            android:padding="10dp"
            android:translationZ="-1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btAddBeneficio">

            <LinearLayout
                android:id="@+id/painelPensao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTransporte">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="4dp"
                    android:paddingStart="0dp"
                    android:text="@string/fpPensao" />

                <TextView
                    android:id="@+id/tvPensao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/valorZero" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/painelDescontos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/painelPensao">

            </LinearLayout>

            <TextView
                android:id="@+id/tvInss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/valorZero"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/inss"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvInss"
                app:layout_constraintEnd_toStartOf="@+id/tvInss" />

            <TextView
                android:id="@+id/tvIrrf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/valorZero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvInss" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/txTransporte"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvTransporte"
                app:layout_constraintEnd_toStartOf="@+id/tvTransporte" />

            <TextView
                android:id="@+id/tvTransporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/valorZero"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvIrrf" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/irrf"
                app:layout_constraintBottom_toBottomOf="@+id/tvIrrf"
                app:layout_constraintEnd_toStartOf="@+id/tvIrrf" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>